--- a/filtra_dados.ipynb
+++ b/filtra_dados.ipynb
@@ -392,14 +392,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>V403311</th>\n",
+       "      <th>V403312</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474570</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474571</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474572</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474573</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>474574</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>474575 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        V403311  V403312\n",
+       "0           5.0   5000.0\n",
+       "1           NaN      NaN\n",
+       "2           4.0   3500.0\n",
+       "3           NaN      NaN\n",
+       "4           NaN      NaN\n",
+       "...         ...      ...\n",
+       "474570      6.0  10000.0\n",
+       "474571      3.0   2500.0\n",
+       "474572      5.0   5000.0\n",
+       "474573      5.0   5000.0\n",
+       "474574      NaN      NaN\n",
+       "\n",
+       "[474575 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Escolhendo as colunas inicialmente escolhidas\n",
     "# faixa do rendimento, rendimento bruto,\n",
     "\n",
-    "colunas = ['V403311','V403312',]"
+    "colunas = ['V403311','V403312',]\n",
+    "\n",
+    "\n",
+    "#Lendo a base de dados apenas com as colunas\n",
+    "\n",
+    "pnad23_2_small = pd.read_csv('https://www.dropbox.com/scl/fi/kvhduq8ocy2o1yj4l0ycc/pnad23_2.csv?rlkey=ni8nhwkv84xg59mp1cnd4gsto&st=yr8uiq5k&dl=1', usecols = colunas)\n",
+    "pnad23_2_small"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renomenando as colunas sem nome\n",
+    "\n",
+    "pnad23_2_small.rename(columns= {}, inplace = True)\n"
    ]
   },
   {
