criação do csv filtrado

--- a/filtra_dados.ipynb
+++ b/filtra_dados.ipynb
@@ -589,196 +589,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Estado</th>\n",
-       "      <th>Sexo</th>\n",
-       "      <th>Idade</th>\n",
-       "      <th>Escolaridade</th>\n",
-       "      <th>Ocupação</th>\n",
-       "      <th>Faixa_de_rendimento</th>\n",
-       "      <th>Rendimento_Bruto</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>29</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>50</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>474570</th>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>10000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>474571</th>\n",
-       "      <td>53</td>\n",
-       "      <td>2</td>\n",
-       "      <td>30</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2500.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>474572</th>\n",
-       "      <td>53</td>\n",
-       "      <td>1</td>\n",
-       "      <td>51</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>474573</th>\n",
-       "      <td>53</td>\n",
-       "      <td>2</td>\n",
-       "      <td>56</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>474574</th>\n",
-       "      <td>53</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>474575 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Estado  Sexo  Idade  Escolaridade  Ocupação  Faixa_de_rendimento  \\\n",
-       "0           11     1     30          10.0       6.0                  5.0   \n",
-       "1           11     2     29          10.0       NaN                  NaN   \n",
-       "2           11     2     50          12.0       4.0                  4.0   \n",
-       "3           11     2     25          10.0       NaN                  NaN   \n",
-       "4           11     2      2           NaN       NaN                  NaN   \n",
-       "...        ...   ...    ...           ...       ...                  ...   \n",
-       "474570      53     1     38          13.0       3.0                  6.0   \n",
-       "474571      53     2     30           NaN       3.0                  3.0   \n",
-       "474572      53     1     51          12.0       3.0                  5.0   \n",
-       "474573      53     2     56          12.0       4.0                  5.0   \n",
-       "474574      53     2     18           NaN       NaN                  NaN   \n",
-       "\n",
-       "        Rendimento_Bruto  \n",
-       "0                 5000.0  \n",
-       "1                    NaN  \n",
-       "2                 3500.0  \n",
-       "3                    NaN  \n",
-       "4                    NaN  \n",
-       "...                  ...  \n",
-       "474570           10000.0  \n",
-       "474571            2500.0  \n",
-       "474572            5000.0  \n",
-       "474573            5000.0  \n",
-       "474574               NaN  \n",
-       "\n",
-       "[474575 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pnad23_2_small"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
@@ -1065,10 +875,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pnad23_2_small.to_csv('pnad23_filtrado.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
