--- a/filtra_dados.ipynb
+++ b/filtra_dados.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -419,6 +419,7 @@
        "      <th>UF</th>\n",
        "      <th>V2007</th>\n",
        "      <th>V2009</th>\n",
+       "      <th>V2010</th>\n",
        "      <th>V3009A</th>\n",
        "      <th>V4012</th>\n",
        "      <th>V403311</th>\n",
@@ -431,6 +432,7 @@
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>30</td>\n",
+       "      <td>4</td>\n",
        "      <td>10.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>5.0</td>\n",
@@ -441,6 +443,7 @@
        "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>29</td>\n",
+       "      <td>4</td>\n",
        "      <td>10.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -451,6 +454,7 @@
        "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>50</td>\n",
+       "      <td>4</td>\n",
        "      <td>12.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>4.0</td>\n",
@@ -461,6 +465,7 @@
        "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>25</td>\n",
+       "      <td>4</td>\n",
        "      <td>10.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -471,6 +476,7 @@
        "      <td>11</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -485,12 +491,14 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>474570</th>\n",
        "      <td>53</td>\n",
        "      <td>1</td>\n",
        "      <td>38</td>\n",
+       "      <td>1</td>\n",
        "      <td>13.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>6.0</td>\n",
@@ -501,6 +509,7 @@
        "      <td>53</td>\n",
        "      <td>2</td>\n",
        "      <td>30</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.0</td>\n",
@@ -511,6 +520,7 @@
        "      <td>53</td>\n",
        "      <td>1</td>\n",
        "      <td>51</td>\n",
+       "      <td>1</td>\n",
        "      <td>12.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>5.0</td>\n",
@@ -521,6 +531,7 @@
        "      <td>53</td>\n",
        "      <td>2</td>\n",
        "      <td>56</td>\n",
+       "      <td>1</td>\n",
        "      <td>12.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>5.0</td>\n",
@@ -531,6 +542,7 @@
        "      <td>53</td>\n",
        "      <td>2</td>\n",
        "      <td>18</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -538,27 +550,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>474575 rows × 7 columns</p>\n",
+       "<p>474575 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        UF  V2007  V2009  V3009A  V4012  V403311  V403312\n",
-       "0       11      1     30    10.0    6.0      5.0   5000.0\n",
-       "1       11      2     29    10.0    NaN      NaN      NaN\n",
-       "2       11      2     50    12.0    4.0      4.0   3500.0\n",
-       "3       11      2     25    10.0    NaN      NaN      NaN\n",
-       "4       11      2      2     NaN    NaN      NaN      NaN\n",
-       "...     ..    ...    ...     ...    ...      ...      ...\n",
-       "474570  53      1     38    13.0    3.0      6.0  10000.0\n",
-       "474571  53      2     30     NaN    3.0      3.0   2500.0\n",
-       "474572  53      1     51    12.0    3.0      5.0   5000.0\n",
-       "474573  53      2     56    12.0    4.0      5.0   5000.0\n",
-       "474574  53      2     18     NaN    NaN      NaN      NaN\n",
+       "        UF  V2007  V2009  V2010  V3009A  V4012  V403311  V403312\n",
+       "0       11      1     30      4    10.0    6.0      5.0   5000.0\n",
+       "1       11      2     29      4    10.0    NaN      NaN      NaN\n",
+       "2       11      2     50      4    12.0    4.0      4.0   3500.0\n",
+       "3       11      2     25      4    10.0    NaN      NaN      NaN\n",
+       "4       11      2      2      4     NaN    NaN      NaN      NaN\n",
+       "...     ..    ...    ...    ...     ...    ...      ...      ...\n",
+       "474570  53      1     38      1    13.0    3.0      6.0  10000.0\n",
+       "474571  53      2     30      1     NaN    3.0      3.0   2500.0\n",
+       "474572  53      1     51      1    12.0    3.0      5.0   5000.0\n",
+       "474573  53      2     56      1    12.0    4.0      5.0   5000.0\n",
+       "474574  53      2     18      1     NaN    NaN      NaN      NaN\n",
        "\n",
-       "[474575 rows x 7 columns]"
+       "[474575 rows x 8 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +579,7 @@
     "# Escolhendo as colunas inicialmente escolhidas\n",
     "# faixa do rendimento, rendimento bruto, gênero, idade, estado, escolaridade, tipo de ocupação\n",
     "\n",
-    "colunas = ['V403311','V403312','V2007','V2009','UF','V3009A','V4012']\n",
+    "colunas = ['V403311','V403312','V2007','V2009','UF','V3009A','V4012','V2010']\n",
     "\n",
     "\n",
     "#Lendo a base de dados apenas com as colunas\n",
@@ -578,13 +590,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Renomenando as colunas sem nome\n",
     "\n",
-    "pnad23_2_small.rename(columns= {'V403311':'Faixa_de_rendimento','V403312':'Rendimento_Bruto','V2007':'Sexo','V2009':'Idade','UF':'Estado','V3009A':'Escolaridade','V4012':'Ocupação'}, inplace = True)\n"
+    "pnad23_2_small.rename(columns= {'V403311':'Faixa_de_rendimento','V403312':'Rendimento_Bruto','V2007':'Sexo','V2009':'Idade','UF':'Estado','V3009A':'Escolaridade','V4012':'Ocupação','V2010':'Cor_ou_Raça'}, inplace = True)\n"
    ]
   },
   {
@@ -625,7 +637,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#renomeando a coluna Cor ou Raça\n",
+    "pnad23_2_small.Cor_ou_Raça = pnad23_2_small.Cor_ou_Raça.astype('category')\n",
+    "pnad23_2_small.Cor_ou_Raça = pnad23_2_small.Cor_ou_Raça.cat.rename_categories({1:'Branca', 2:'Preta',3:'Amarela',4:'Parda',5:'Indigena',9:'Ignorado'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -686,6 +709,7 @@
        "      <th>Estado</th>\n",
        "      <th>Sexo</th>\n",
        "      <th>Idade</th>\n",
+       "      <th>Cor_ou_Raça</th>\n",
        "      <th>Escolaridade</th>\n",
        "      <th>Ocupação</th>\n",
        "      <th>Faixa_de_rendimento</th>\n",
@@ -695,50 +719,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>Homem</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
        "      <td>30</td>\n",
-       "      <td>Regular do ensino médio ou do 2º grau</td>\n",
+       "      <td>Parda</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>Conta Própria</td>\n",
        "      <td>[3SM]+1 a [5SM]</td>\n",
        "      <td>5000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>Mulher</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
        "      <td>50</td>\n",
-       "      <td>Superior - graduação</td>\n",
+       "      <td>Parda</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>Empregado do setor público (inclusive empresas...</td>\n",
        "      <td>[2SM]+1 a [3SM]</td>\n",
        "      <td>3500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>Mulher</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2</td>\n",
        "      <td>54</td>\n",
-       "      <td>Superior - graduação</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>Empregado do setor público (inclusive empresas...</td>\n",
        "      <td>[2SM]+1 a [3SM]</td>\n",
        "      <td>3700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>Homem</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
        "      <td>36</td>\n",
-       "      <td>Regular do ensino fundamental ou do 1º grau</td>\n",
+       "      <td>Parda</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>Conta Própria</td>\n",
        "      <td>[2SM]+1 a [3SM]</td>\n",
        "      <td>3300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Rondônia</td>\n",
-       "      <td>Homem</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
        "      <td>33</td>\n",
-       "      <td>Regular do ensino médio ou do 2º grau</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>Conta Própria</td>\n",
        "      <td>[2SM]+1 a [3SM]</td>\n",
        "      <td>3500.0</td>\n",
@@ -752,88 +781,81 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>474566</th>\n",
-       "      <td>Distrito Federal</td>\n",
-       "      <td>Mulher</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2</td>\n",
        "      <td>48</td>\n",
-       "      <td>Superior - graduação</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>Empregado do setor privado</td>\n",
        "      <td>[3SM]+1 a [5SM]</td>\n",
        "      <td>5000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>474568</th>\n",
-       "      <td>Distrito Federal</td>\n",
-       "      <td>Mulher</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2</td>\n",
        "      <td>28</td>\n",
-       "      <td>Superior - graduação</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>Empregado do setor público (inclusive empresas...</td>\n",
        "      <td>[2SM]+1 a [3SM]</td>\n",
        "      <td>3500.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>474570</th>\n",
-       "      <td>Distrito Federal</td>\n",
-       "      <td>Homem</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
        "      <td>38</td>\n",
-       "      <td>Especialização de nível superior</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>13.0</td>\n",
        "      <td>Empregado do setor privado</td>\n",
        "      <td>[5SM]+1 a [10SM]</td>\n",
        "      <td>10000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>474572</th>\n",
-       "      <td>Distrito Federal</td>\n",
-       "      <td>Homem</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
        "      <td>51</td>\n",
-       "      <td>Superior - graduação</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>Empregado do setor privado</td>\n",
        "      <td>[3SM]+1 a [5SM]</td>\n",
        "      <td>5000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>474573</th>\n",
-       "      <td>Distrito Federal</td>\n",
-       "      <td>Mulher</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2</td>\n",
        "      <td>56</td>\n",
-       "      <td>Superior - graduação</td>\n",
+       "      <td>Branca</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>Empregado do setor público (inclusive empresas...</td>\n",
        "      <td>[3SM]+1 a [5SM]</td>\n",
        "      <td>5000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>175176 rows × 7 columns</p>\n",
+       "<p>175176 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Estado    Sexo  Idade  \\\n",
-       "0               Rondônia   Homem     30   \n",
-       "2               Rondônia  Mulher     50   \n",
-       "7               Rondônia  Mulher     54   \n",
-       "9               Rondônia   Homem     36   \n",
-       "11              Rondônia   Homem     33   \n",
-       "...                  ...     ...    ...   \n",
-       "474566  Distrito Federal  Mulher     48   \n",
-       "474568  Distrito Federal  Mulher     28   \n",
-       "474570  Distrito Federal   Homem     38   \n",
-       "474572  Distrito Federal   Homem     51   \n",
-       "474573  Distrito Federal  Mulher     56   \n",
-       "\n",
-       "                                       Escolaridade  \\\n",
-       "0             Regular do ensino médio ou do 2º grau   \n",
-       "2                              Superior - graduação   \n",
-       "7                              Superior - graduação   \n",
-       "9       Regular do ensino fundamental ou do 1º grau   \n",
-       "11            Regular do ensino médio ou do 2º grau   \n",
-       "...                                             ...   \n",
-       "474566                         Superior - graduação   \n",
-       "474568                         Superior - graduação   \n",
-       "474570             Especialização de nível superior   \n",
-       "474572                         Superior - graduação   \n",
-       "474573                         Superior - graduação   \n",
+       "        Estado  Sexo  Idade Cor_ou_Raça  Escolaridade  \\\n",
+       "0           11     1     30       Parda          10.0   \n",
+       "2           11     2     50       Parda          12.0   \n",
+       "7           11     2     54      Branca          12.0   \n",
+       "9           11     1     36       Parda           7.0   \n",
+       "11          11     1     33      Branca          10.0   \n",
+       "...        ...   ...    ...         ...           ...   \n",
+       "474566      53     2     48      Branca          12.0   \n",
+       "474568      53     2     28      Branca          12.0   \n",
+       "474570      53     1     38      Branca          13.0   \n",
+       "474572      53     1     51      Branca          12.0   \n",
+       "474573      53     2     56      Branca          12.0   \n",
        "\n",
        "                                                 Ocupação Faixa_de_rendimento  \\\n",
        "0                                           Conta Própria     [3SM]+1 a [5SM]   \n",
@@ -861,10 +883,10 @@
        "474572            5000.0  \n",
        "474573            5000.0  \n",
        "\n",
-       "[175176 rows x 7 columns]"
+       "[175176 rows x 8 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,12 +897,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "pnad23_2_small.to_csv('pnad23_filtrado.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
