--- a/filtra_dados.ipynb
+++ b/filtra_dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Rodando a base de dados completa do segundo semestre\n",
-    "\n",
-    "#pnad23_2_all = pd.read_csv('https://www.dropbox.com/scl/fi/kvhduq8ocy2o1yj4l0ycc/pnad23_2.csv?rlkey=ni8nhwkv84xg59mp1cnd4gsto&st=yr8uiq5k&dl=1')\n",
-    "#pnad23_2_all"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +196,7 @@
        "[474575 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,9 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pnad23_2_small' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#renomeando a coluna Cor ou Raça\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m pnad23_2_small\u001b[38;5;241m.\u001b[39mCor_ou_Raça \u001b[38;5;241m=\u001b[39m pnad23_2_small\u001b[38;5;241m.\u001b[39mCor_ou_Raça\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m pnad23_2_small\u001b[38;5;241m.\u001b[39mCor_ou_Raça \u001b[38;5;241m=\u001b[39m pnad23_2_small\u001b[38;5;241m.\u001b[39mCor_ou_Raça\u001b[38;5;241m.\u001b[39mcat\u001b[38;5;241m.\u001b[39mrename_categories({\u001b[38;5;241m1\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBranca\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m2\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPreta\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m3\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAmarela\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m4\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mParda\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m5\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIndigena\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m9\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIgnorado\u001b[39m\u001b[38;5;124m'\u001b[39m})\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pnad23_2_small' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#renomeando a coluna Cor ou Raça\n",
     "pnad23_2_small.Cor_ou_Raça = pnad23_2_small.Cor_ou_Raça.astype('category')\n",
@@ -287,9 +287,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pnad23_2_small' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#renomeando coluna ocupação\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m pnad23_2_small\u001b[38;5;241m.\u001b[39mOcupação \u001b[38;5;241m=\u001b[39m pnad23_2_small\u001b[38;5;241m.\u001b[39mOcupação\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m pnad23_2_small\u001b[38;5;241m.\u001b[39mOcupação \u001b[38;5;241m=\u001b[39m pnad23_2_small\u001b[38;5;241m.\u001b[39mOcupação\u001b[38;5;241m.\u001b[39mcat\u001b[38;5;241m.\u001b[39mrename_categories({\u001b[38;5;241m1.0\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrabalhador doméstico\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m2.0\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMilitar do exército, da marinha, da aeronáutica, da polícia militar ou do corpo de bombeiros militar\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m3.0\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmpregado do setor privado\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m4.0\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmpregado do setor público (inclusive empresas de economia mista)\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m5.0\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmpregador\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;241m6.0\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mConta Própria\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;241m7.0\u001b[39m:\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrabalhador familiar não remunerado\u001b[39m\u001b[38;5;124m'\u001b[39m})\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pnad23_2_small' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#renomeando coluna ocupação\n",
     "pnad23_2_small.Ocupação = pnad23_2_small.Ocupação.astype('category')\n",
