--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -1,8 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Análise Exploratória - Projeto 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"indice\">\n",
+    "\n",
+    "## Índice\n",
+    "\n",
+    "- [Bibliotecas utilizadas](#biblio)\n",
+    "- [Importação da base de dados](#base-dados)\n",
+    "1. [Escolaridade e Rendimento](#esc-bruto)\n",
+    "2. [Distribuição Salarial por Faixa de Rendimento](#salario-faixa)\n",
+    "3. [Análise por Sexo e Cor/Raça](#sexo-cor)\n",
+    "4. [Análise por Idade](#idade)\n",
+    "5. [Distribuição de Ocupação](ocupa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"biblio\"></div>\n",
+    "\n",
+    "## Importação de bibliotecas utilizadas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +49,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"base-dados\"></div>\n",
+    "\n",
+    "## Importação da base de dados e criação de variáveis:\n",
+    "\n",
+    "[Índice](#indice)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +195,7 @@
        "4            3500.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +220,7 @@
        "Name: Escolaridade, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -287,13 +334,30 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dados.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"esc-bruto\"></div>\n",
+    "\n",
+    "## Análise de relação de Escolaridade X Rendimento Bruto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Índice](#indice)"
    ]
   },
   {
@@ -651,11 +715,85 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- ___\n",
+    "<div id=\"salario-faixa\"></div>\n",
+    "\n",
+    "## Distribuição Salarial por Faixa de Rendimento\n",
+    "\n",
+    "[Índice](#indice) -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"sexo-cor\"></div>\n",
+    "\n",
+    "## Análise por Sexo e Cor/Raça\n",
+    "\n",
+    "[Índice](#indice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"idade\"></div>\n",
+    "\n",
+    "## Análise por Idade\n",
+    "\n",
+    "[Índice](#indice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"ocupa\"></div>\n",
+    "\n",
+    "## Distribuição por Ocupação\n",
+    "\n",
+    "[Índice](#indice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -669,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
