remocao de valores aberrantes de cor e raca

--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -1072,6 +1072,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ignorados = dados[\"Cor_ou_Raça\"] == \"Ignorado\"\n",
+    "dados_corrigidos = dados.drop(dados[ignorados].index)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
