--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -1129,6 +1129,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ocupação\n",
+       "Conta Própria                                                                                           2134.233617\n",
+       "Empregado do setor privado                                                                              2343.454260\n",
+       "Empregado do setor público (inclusive empresas de economia mista)                                       4189.031607\n",
+       "Empregador                                                                                              6932.884492\n",
+       "Militar do exército, da marinha, da aeronáutica, da polícia militar ou do corpo de bombeiros militar    6369.334082\n",
+       "Trabalhador doméstico                                                                                   1108.325629\n",
+       "Name: Rendimento_Bruto, dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rendimento_ocupacao_media = dados.groupby('Ocupação')['Rendimento_Bruto'].mean()\n",
+    "rendimento_ocupacao_media"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
