--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Análise Exploratória - Projeto 3"
+    "### <p style = 'color: darkorange'> **Análise Exploratória - Projeto 3**"
    ]
   },
   {
@@ -519,7 +519,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "___\n",
     "<div id=\"sexo-cor\"></div>\n",
     "\n",
@@ -527,21 +526,6 @@
     "- Aqui será feita a busca por valores aberrantes e por amostras que possam alterar demais os resultados finais.\n",
     "\n",
     "[Índice](#indice)"
-=======
-    "<!-- ___\n",
-    "<div id=\"salario-faixa\"></div>\n",
-    "\n",
-    "## Distribuição Salarial por Faixa de Rendimento\n",
-    "\n",
-    "[Índice](#indice) -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Dados de Raça"
->>>>>>> 4de63360afacfc51b6589d9a2dcd26efd4fa0030
    ]
   },
   {
