--- a/modelo_predicao.ipynb
+++ b/modelo_predicao.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,29 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# Para ter melhor print\n",
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Split em Treino e Teste**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +48,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Função utilitária para fazer a regressão com constante adicionada\n",
+    "\n",
+    "def regress(Y,X):\n",
+    "    '''\n",
+    "    Y: coluna do DataFrame utilizada como variável resposta (TARGET)\n",
+    "    X: coluna(s) do DataFrame utilizadas como variável(is) explicativas (FEATURES)\n",
+    "    '''\n",
+    "    X_cp = sm.add_constant(X)\n",
+    "    model = sm.OLS(Y,X_cp)\n",
+    "    results = model.fit()\n",
+    "    \n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Estado                 0\n",
+       "Sexo                   0\n",
+       "Idade                  0\n",
+       "Cor_ou_Raça            0\n",
+       "Escolaridade           0\n",
+       "Ocupação               0\n",
+       "Faixa_de_rendimento    0\n",
+       "Rendimento_Bruto       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Estado                  object\n",
+       "Sexo                    object\n",
+       "Idade                    int64\n",
+       "Cor_ou_Raça             object\n",
+       "Escolaridade            object\n",
+       "Ocupação                object\n",
+       "Faixa_de_rendimento     object\n",
+       "Rendimento_Bruto       float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_colunas = dados[['Estado', 'Sexo', 'Idade', 'Cor_ou_Raça', 'Escolaridade', 'Ocupação','Faixa_de_rendimento']]\n",
+    "\n",
+    "y_coluna = dados[['Rendimento_Bruto']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train, x_test, y_train, y_test = train_test_split(x ,y , test_size=0.33, random_state= 42 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#results = regress(y_coluna,x_colunas)\n",
+    "#results.summary()"
    ]
   }
  ],
