--- a/conclusao.ipynb
+++ b/conclusao.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <p style = 'color: darkorange'> **Conclusão - Projeto 3**"
+    "### **Conclusão - Projeto 3**"
    ]
   },
   {
