--- a/modelo_predicao.ipynb
+++ b/modelo_predicao.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <p style = 'color: darkorange'> **Modelo de predição - Projeto 3**"
+    "### **Modelo de predição - Projeto 3**"
    ]
   },
   {
