--- a/analise_exploratoria.ipynb
+++ b/analise_exploratoria.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <p style = 'color: darkorange'> **Análise Exploratória - Projeto 3**"
+    "### **Análise Exploratória - Projeto 3**"
    ]
   },
   {
