--- a/modelo_predicao.ipynb
+++ b/modelo_predicao.ipynb
@@ -124,27 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = dados.drop(columns=['Rendimento_Bruto'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_colunas = dados[['Estado', 'Sexo', 'Idade', 'Cor_ou_Raça', 'Escolaridade', 'Ocupação','Faixa_de_rendimento']]\n",
     "\n",
-    "y_coluna = dados[['Rendimento_Bruto']]\n"
+    "y_colunas = dados[['Rendimento_Bruto']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,22 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x ,y , test_size=0.33, random_state= 42 )"
+    "x_train, x_test, y_train, y_test = train_test_split(x_colunas ,y_coluna , test_size=0.33, random_state= 42 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#results = regress(y_coluna,x_colunas)\n",
     "#results.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
