--- a/modelo_predicao.ipynb
+++ b/modelo_predicao.ipynb
@@ -144,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(x_colunas ,y_coluna , test_size=0.33, random_state= 42 )"
+    "x_train, x_test, y_train, y_test = train_test_split(x_colunas ,y_colunas , test_size=0.33, random_state= 42 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
