--- a/Projeto 3 - Ciência dos Dados.ipynb
+++ b/Projeto 3 - Ciência dos Dados.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "## Pergunta Principal\n",
-    "> **Qual o salário mais provável, baseado no tempo de escolaridade de uma pessoa?**"
+    "> **Qual o salário mais provável, baseado nas suas características socieconômicas de uma pessoa?**"
    ]
   },
   {
@@ -38,8 +38,8 @@
    "metadata": {},
    "source": [
     "## Introdução\n",
-    "Este projeto tem como objetivo prever o salário de uma pessoa com base em seu nível de escolaridade, utilizando os microdados da PNAD Contínua. A PNAD fornece informações abrangentes sobre a situação socioeconômica e laboral da população brasileira, sendo, portanto, uma fonte rica e confiável para investigar a relação entre educação e renda no mercado de trabalho.\n",
-    "O salário de um trabalhador é influenciado por múltiplos fatores,como setor de atuação, região geográfica e características demográficas. Neste projeto, buscamos entender como o nível de escolaridade impacta o salário de um trabalhador."
+    "Este projeto tem como objetivo prever o salário de uma pessoa nas suas características socieconômicas, utilizando os microdados da PNAD Contínua. A PNAD fornece informações abrangentes sobre a situação socioeconômica e laboral da população brasileira, sendo, portanto, uma fonte rica e confiável para investigar a relação entre educação e renda no mercado de trabalho.\n",
+    "O salário de um trabalhador é influenciado por múltiplos fatores,como setor de atuação, região geográfica e características demográficas. Neste projeto, buscamos entender como tais fatores impacta o salário de um trabalhador."
    ]
   },
   {
