--- a/Projeto 3 - Ciência dos Dados.ipynb
+++ b/Projeto 3 - Ciência dos Dados.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "## Pergunta Principal\n",
-    "> **Qual o salário mais provável, baseado nas suas características socieconômicas de uma pessoa?**"
+    "> **Qual o salário mais provável, baseado nas características socieconômicas de uma pessoa?**"
    ]
   },
   {
