mais akgumas paradas

--- a/Projeto 3 - Ciência dos Dados.ipynb
+++ b/Projeto 3 - Ciência dos Dados.ipynb
@@ -48,9 +48,9 @@
    "metadata": {},
    "source": [
     "## Objetivo\n",
-    "O objetivo principal do projeto é construir um modelo preditivo que estime o salário de uma pessoa a partir do nível de escolaridade, considerando as seguintes variáveis adicionais para aprimorar a previsão:\n",
+    "O objetivo principal do projeto é construir um modelo preditivo que estime o salário de uma pessoa a partir de suas características socioeconômicas, considerando as seguintes variáveis para aprimorar a previsão:\n",
     "- **Rendimento Bruto** (Target)\n",
-    "- **Escolaridade** (principal variável explicativa)\n",
+    "- **Escolaridade**\n",
     "- **Idade**\n",
     "- **Gênero**\n",
     "- **Localização Geográfica** \n",
