Link do arquivo de compilaão arrumado

--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -171,7 +171,7 @@
     "## O projeto\n",
     "Com o objetivo de prever o salário mais provável de uma pessoa, baseando-se nas suas características socioeconômicas, este projeto utiliza os microdados da PNAD Contínua.\n",
     "Para construir um modelo preditivo, foi feito a escolha da nossa Target, sendo esta o rendimento bruto, e a seleção das variáveis explicativas , sendo estas escolaridade, idade, gênero, localização geográfica, ocupação, cor/raça e faixa de rendimento. \n",
-    "A análise exploratória dos dados foi feita no arquivo Jupyter [analise_exploratória.iypnb](.https://vscode.dev/github/jlbrasileiro/Projeto-3---Ci-ncia-dos-Dados---2024.2/blob/main/analise_exploratoria.ipynb)\n",
+    "A análise exploratória dos dados foi feita no arquivo Jupyter [analise_exploratória.iypnb](analise_exploratoria.ipynb)\n",
     "\n",
     "Para atingir o princip\n",
     "\n",
