--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -846,7 +846,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Nas celulas abaixo utilizamos as métricas MAE(Erro médio absoluto), MSE(Erro médio quadrático) e R^2(Coeficiente de determinação que mede quanto da variância dos modelos reais é explicada pelo modelo)"
+   ]
   },
   {
    "cell_type": "code",
@@ -873,8 +875,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O MAE indica que o modelo errou, em média, 210.69 unidades nas previsões. Um erro baixo, indicando uma boa performance nos dados de treino."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O valor do MSE é 46390.57. Esse número é maior devido à penalização de erros maiores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O valor de R^2 foi de 0.97, indicando que o modelo está ajustado para a base de treino, mas o bom desempenho não garante que seja bom com os dados de teste."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +906,7 @@
        "(434.50358136448807, 3465863.87181802, 0.7714871476759115)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,12 +916,43 @@
     "mse = mean_squared_error(y_test, y_prev)\n",
     "r2 = r2_score(y_test, y_prev)\n",
     "mae = mean_absolute_error(y_test, y_prev)\n",
-    "mae, mse, r2"
+    "mae, mse, r2 "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "O MAE indica que o modelo errou, em média, 434.50 unidades nas previsões. Valor maior do que nos dados de treino. Indicando dificuldade em generalizar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O valor do MSE é 3465863.87. Mostrando um aumento considerável nos erros grandes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O valor de R^2 foi de 0.77, mostrando que ainda explica boa parte da variância nos dados de teste, mas com desempenho inferior do que com os dados de treino."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O modelo se saiu muito bem com a base de treino, porém seu desempenho caiu quando foi  utilizada a base de teste, sugerindo um pouco de overfitting.\n",
+    "Overfitting é justamente quando um modelo se sai muito bem com os dados de treino, porém seu desempenho cai com os dados de treino."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
