--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -847,7 +847,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nas celulas abaixo utilizamos as métricas MAE(Erro médio absoluto), MSE(Erro médio quadrático) e R^2(Coeficiente de determinação que mede quanto da variância dos modelos reais é explicada pelo modelo)"
+    "### Nas celulas abaixo utilizamos as métricas MAE(Erro médio absoluto), MSE(Erro médio quadrático) e $R^2$(Coeficiente de determinação que mede quanto da variância dos modelos reais é explicada pelo modelo)"
    ]
   },
   {
@@ -892,7 +892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O valor de R^2 foi de 0.97, indicando que o modelo está ajustado para a base de treino, mas o bom desempenho não garante que seja bom com os dados de teste."
+    "O valor de $R^2$ foi de 0.97, indicando que o modelo está ajustado para a base de treino, mas o bom desempenho não garante que seja bom com os dados de teste."
    ]
   },
   {
@@ -937,7 +937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O valor de R^2 foi de 0.77, mostrando que ainda explica boa parte da variância nos dados de teste, mas com desempenho inferior do que com os dados de treino."
+    "O valor de $R^2$ foi de 0.77, mostrando que ainda explica boa parte da variância nos dados de teste, mas com desempenho inferior do que com os dados de treino."
    ]
   },
   {
