Terminei minha parte

--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Projeto 3 (Ciência dos dados)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"indice\"></indice>\n",
+    "\n",
+    "1. [Bibliotecas utilizadas](#bibliotecas)\n",
+    "2. [Separando as bases de dados](#\"bases\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"bibliotecas\"></div>\n",
+    "\n",
+    "## Importando as bibliotecas necessárias"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -182,6 +210,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "___\n",
+    "<div id=\"bases\"></div>\n",
+    "\n",
     "## Separando a base de treino e teste "
    ]
   },
@@ -1359,7 +1390,7 @@
     "___\n",
     "<div id='regressao'></div>\n",
     "\n",
-    "## Modelo de regressão\n"
+    "## Modelo de regressão (OLS)\n"
    ]
   },
   {
