Mais alguns comentários

--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -15,7 +15,11 @@
     "<div id=\"indice\"></indice>\n",
     "\n",
     "1. [Bibliotecas utilizadas](#bibliotecas)\n",
-    "2. [Separando as bases de dados](#\"bases\")"
+    "2. [Objetivo do projeto](#projeto)\n",
+    "3. [Separando as bases de dados](#bases)\n",
+    "4. [Modelo Random Forest](#forest)\n",
+    "5. [Modelo de Regressão OLS](#regressao)\n",
+    "6. [Comparação de modelos](#erros)"
    ]
   },
   {
@@ -196,14 +200,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## O projeto\n",
+    "___\n",
+    "<div id=\"projeto\"></div>\n",
+    "\n",
+    "## O Projeto\n",
     "Com o objetivo de prever o salário mais provável de uma pessoa, baseando-se nas suas características socioeconômicas, este projeto utiliza os microdados da PNAD Contínua.\n",
     "Para construir um modelo preditivo, foi feito a escolha da nossa Target, sendo esta o rendimento bruto, e a seleção das variáveis explicativas , sendo estas escolaridade, idade, gênero, localização geográfica, ocupação, cor/raça e faixa de rendimento. \n",
     "A análise exploratória dos dados foi feita no arquivo Jupyter [analise_exploratória.iypnb](analise_exploratoria.ipynb)\n",
     "\n",
     "Para atingir o objetivo foi necessário aplicar dois modelos preditivos, cujas precisões e resultados foram comparados a fim de decidir qual o modelo mais adequado para o porblema.\n",
     "\n",
-    "\n"
+    "\n",
+    "[Índice](#indice)"
    ]
   },
   {
@@ -824,7 +832,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aplicando o modelo Random Forest"
+    "___\n",
+    "<div id=\"forest\"></div>\n",
+    "\n",
+    "## Aplicando o modelo Random Forest\n",
+    "\n",
+    "[Índice](#indice)"
    ]
   },
   {
@@ -986,7 +999,9 @@
     "___\n",
     "<div id='regressao'></div>\n",
     "\n",
-    "## Modelo de regressão (OLS)\n"
+    "## Modelo de regressão (OLS)\n",
+    "\n",
+    "[Índice](#indice)"
    ]
   },
   {
@@ -1838,6 +1853,18 @@
     "plt.xlabel(\"Valores reais\")\n",
     "plt.ylabel(\"Valores previstos\")\n",
     "plt.grid() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"erros\"></div>\n",
+    "\n",
+    "## Comparação entre modelos\n",
+    "\n",
+    "[Índice](#indice)"
    ]
   },
   {
