--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -1992,7 +1992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Após a análise dos resultados de ambos os modelos, o grupo percebeu que, apesar de demorar mais para ser compilado, o modelo de predição mais adequado para o [objetivo](#projeto) estabelecido previamente, uma vez que o tempo acrescentado ao período de processamento não é tão grande para a base de dados fornecida, e dado que o parâmetro $R^2$ é mais favorável no caso desse modelo do que se comparado ao modelo OLS, o qual se destacou na velocidade de processamento, e por ser mais favorável a outras métricas, tais como $MSE$ e $MAE$"
+    "Após a análise dos resultados de ambos os modelos, o grupo percebeu que, apesar de demorar mais para ser compilado, o modelo de predição mais adequado para o [objetivo](#projeto) estabelecido previamente é o Random Forest Regressor, uma vez que o tempo acrescentado ao período de processamento não é tão grande para a base de dados fornecida, e dado que o parâmetro $R^2$ é mais favorável no caso desse modelo do que se comparado ao modelo OLS, o qual se destacou na velocidade de processamento, e por ser mais favorável a outras métricas, tais como $MSE$ e $MAE$"
    ]
   }
  ],
