Fiz o comentario do grafico do modelo ols

--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -1897,6 +1897,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "O grafico mostra que o modelo, assim como com o modelo anterior, tem uma boa precisão, tendo a maioria dos pontos pertos da linha de tendencia, principalmente em valores mais baixos, porem, conforme os valores aumentam começa a haver uma maior dispersão entre os valores, sugerindo que tambem existem erros pontuaios no modelo de previsão."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "___\n",
     "<div id=\"erros\"></div>\n",
     "\n",
