Projeto finalizado Aleluia

--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -11,6 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Integrantes\n",
+    "\n",
+    "* Láisa Camily\n",
+    "* Lorenzo Agiman\n",
+    "* João Lucas Brasileiro\n",
+    "* Rafael Vieira Bravo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "___\n",
     "<div id=\"indice\"></indice>\n",
     "\n",
@@ -20,7 +32,8 @@
     "4. [Modelo Random Forest](#forest)\n",
     "5. [Modelo de Regressão OLS](#regressao)\n",
     "6. [Comparação de modelos](#erros)\n",
-    "7. [Conclusão](#conclusao)"
+    "7. [Conclusão](#conclusao)\n",
+    "8. [Bibliografia](#documentacao)"
    ]
   },
   {
@@ -35,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +220,7 @@
     "## O Projeto\n",
     "Com o objetivo de prever o salário mais provável de uma pessoa, baseando-se nas suas características socioeconômicas, este projeto utiliza os microdados da PNAD Contínua.\n",
     "Para construir um modelo preditivo, foi feito a escolha da nossa Target, sendo esta o rendimento bruto, e a seleção das variáveis explicativas , sendo estas escolaridade, idade, gênero, localização geográfica, ocupação, cor/raça e faixa de rendimento. \n",
-    "A análise exploratória dos dados foi feita no arquivo Jupyter [analise_exploratória.iypnb](analise_exploratoria.ipynb)\n",
+    "A análise exploratória dos dados foi feita no arquivo Jupyter [analise_exploratória.ipynb](analise_exploratoria.ipynb)\n",
     "\n",
     "Para atingir o objetivo foi necessário aplicar dois modelos preditivos, cujas precisões e resultados foram comparados a fim de decidir qual o modelo mais adequado para o porblema.\n",
     "\n",
@@ -2000,6 +2013,23 @@
    "metadata": {},
    "source": [
     "Após a análise dos resultados de ambos os modelos, o grupo percebeu que, apesar de demorar mais para ser compilado, o modelo de predição mais adequado para o [objetivo](#projeto) estabelecido previamente é o Random Forest Regressor, uma vez que o tempo acrescentado ao período de processamento não é tão grande para a base de dados fornecida, e dado que o parâmetro $R^2$ é mais favorável no caso desse modelo do que se comparado ao modelo OLS, o qual se destacou na velocidade de processamento, e por ser mais favorável a outras métricas, tais como $MSE$ e $MAE$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "<div id=\"documentacao\"></div>\n",
+    "\n",
+    "## Bibliografia\n",
+    "\n",
+    "* [Conteúdos da aula 28](fontes/Aula28_Atividade_RegressaoMultipla.ipynb)\n",
+    "* [Documentação de Random Forest](https://scikit-learn.org/dev/modules/generated/sklearn.ensemble.RandomForestRegressor.html)\n",
+    "* [Documentação da OLS](https://www.statsmodels.org/dev/generated/statsmodels.regression.linear_model.OLS.html)\n",
+    "\n",
+    "\n",
+    "[Índice](#indice)"
    ]
   }
  ],
