--- a/compilando_projetos.ipynb
+++ b/compilando_projetos.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "## Integrantes\n",
     "\n",
-    "* Láisa Camily\n",
+    "* Láisa Camilly de Oliveira\n",
     "* Lorenzo Agiman\n",
-    "* João Lucas Brasileiro\n",
+    "* João Lucas Brasileiro de Sousa Lopes\n",
     "* Rafael Vieira Bravo"
    ]
   },
